# HingLang

./: .gitignore  MANIFEST.in  README.md  build_backend.py  main.py  pyproject.toml  run_demos.py  run_tests.py
examples/: demo.hing
examples/demos/: 01_basics.hing  02_arithmetic.hing  03_if_else.hing  04_while_loop.hing  05_input_output.hing  06_nested_control.hing
examples/demos/failing/: 91_fail_lexical_invalid_char.hing  92_fail_parse_unterminated_if.hing  93_fail_semantic_undeclared_variable.hing  94_fail_runtime_division_by_zero.hing
hinglang/: __init__.py  ast_nodes.py  compiler_errors.py  hing_token.py  hinglang_spec.py  lexer.py  parser.py  semantic_analyzer.py  tac_executor.py  tac_generator.py
tests/: test_compiler_pipeline.py
